--- a/examples.html
+++ b/examples.html
@@ -53,6 +53,13 @@
           color: #FFF;
           text-align: center;
         }
+
+        code {
+          display: block;
+          background-color: #cccccc;
+          margin-bottom: 1.5em;
+          margin-top: .5em;
+        }
       </style>
   </head>
   <body>
